gccida/g2/peep2_find_free_register
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peep2_find_free_register/src/recog.c:3395:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peep2_find_free_register/src/recog.c:3443:8: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
v10 = &peep2_insn_data_0[v7]; 
       ^~~~~~~~~~~~~~~~~
       peep2_insn_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peep2_find_free_register/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peep2_find_free_register/src/recog.c:3453:8: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
v13 = &peep2_insn_data_0[v7]; 
       ^~~~~~~~~~~~~~~~~
       peep2_insn_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peep2_find_free_register/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peep2_find_free_register/src/recog.c:3540:13: error: use of undeclared identifier 'search_ofs_1'
v18 = v17 + search_ofs_1; 
            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peep2_find_free_register/src/recog.c:3541:12: error: use of undeclared identifier 'search_ofs_1'
if ( v17 + search_ofs_1 > 52 ) 
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peep2_find_free_register/src/recog.c:3542:13: error: use of undeclared identifier 'search_ofs_1'
v18 = v17 + search_ofs_1 - 53; 
            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peep2_find_free_register/src/recog.c:3556:24: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v25 = ( unsigned int)( mode_class_0[mode] - 5) <= 1; 
                       ^~~~~~~~~~~~
                       mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peep2_find_free_register/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peep2_find_free_register/src/recog.c:3595:1: error: use of undeclared identifier 'search_ofs_1'
search_ofs_1 = 0; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peep2_find_free_register/src/recog.c:3609:24: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v28 = ( unsigned int)( mode_class_0[mode] - 5) <= 1; 
                       ^~~~~~~~~~~~
                       mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peep2_find_free_register/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peep2_find_free_register/src/recog.c:3650:1: error: use of undeclared identifier 'search_ofs_1'
search_ofs_1 = v38; 
^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peep2_find_free_register/src/obj/recog.o] Error 1
